--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 
 :root {
     --font: "Zalando", Arial, Helvetica, sans-serif;
+    --font-serif: "Source Serif", Georgia, serif;
     --text-light: #f0f0f0;
     --text-dark: #1a1a1a;
     --primary-color: #ff8800;
@@ -34,7 +35,7 @@ body {
 nav {
     position: fixed;
     top: 0;
-    left: 0; 
+    left: 0;
     width: 100%;
     height: 15vh;
     background-color: rgba(0, 0, 0, 0.5);
@@ -110,8 +111,102 @@ nav button:hover {
 section {
     width: 100%;
     height: 100vh;
+    background-color: var(--background-color);
 }
 
 .landing {
     background: url(src/bg_3.jpg) center/cover no-repeat;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 5%;
+    color: var(--text-light);
+}
+
+.landing h1 {
+    font-family: var(--font-serif);
+    font-size: 5rem;
+    margin-bottom: 2vh;
+    font-style: italic;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+}
+
+.landing h2 {
+    font-size: 2rem;
+    margin-bottom: 1.5vh;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+}
+
+.landing button {
+    width: 15vw;
+    padding: 10px 0;
+    margin-bottom: 1.5vh;
+    background-color: rgba(0, 0, 0, 0.3);
+    border: 2px solid var(--text-light);
+    border-radius: 25px;
+    color: var(--text-light);
+    font-weight: bold;
+    font-size: 1.4rem;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.landing button:hover {
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
+    transition: all 0.3s;
+}
+
+.landing div {
+    display: flex;
+    gap: 20px;
+    padding-left: 0.5vw;
+}
+
+.landing div a img {
+    width: 45px;
+    height: 45px;
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+
+.landing div a img:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s;
+}
+
+.about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 10vh;
+}
+
+.about .person {
+    display: flex;
+    gap: 10vw;
+    align-items: center;
+    padding: 0 10% 0 5%;
+    margin-bottom: 10vh;
+    text-align: justify;
+}
+
+.about .person .infos h2 {
+    font-size: 2rem;
+    margin-bottom: 5vh;
+    color: var(--text-dark);
+}
+
+.about .person .infos p {
+    font-size: 1.2rem;
+    line-height: 1.5;
+    color: var(--text-dark);
+}
+
+.about .person img {
+    position: relative;
+    border-radius: 25px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border: 3.5px solid var(--primary-color);
 }
